taco-web-ing.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`k8staco.duckdns.org`)
      kind: Rule
      services:
        - name: taco
          kind: Service
          port: 7070
