taco.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taco-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: taco-app
  template:
    metadata:
      labels:
        app: taco-app
    spec:
      containers:
      - name: taco-container
        image: biighunter/tacoshop:v0.40.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7070
      containers:
      - name: private-reg-container-name
        image: biighunter/tacoshop:v0.40.0
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: taco-service
spec:
  type: ClusterIP
  selector:
    app: taco-app
  ports:
  - protocol: TCP
    port: 7070
    targetPort: 7070

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taco-ingress
spec:
  tls:
  - hosts:
    - k8staco.duckdns.org
    secretName: example-app-tls
  rules:
  - host: k8staco.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taco-service
            port:
              number: 7070
